# Hypr-Keys

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KeybindModel.cpp  KeybindModel.h  README.md  ThemeManager.cpp  ThemeManager.h  build.sh  changelog.md  default.conf  main.cpp  main.qml  minimal.qml  run.sh  simple.qml
scripts/: validate-themes.py
themes/: default.json  light.json  themes.json
